UCDetector 1.7.0 from 2011-??-??:
New features:
 - [ 3176780 ] New option: ignore "derived" files

Bugfixes:


Todo:


// -----------------------------------------------------------------------------
UCDetector 1.7.0 from 2011-02-04:
New features:
 - [ 3049290 ] Set target platform in headless mode
 - Headless: Iterate over projects or resources. Use option file
 - Better html report: Show icons, javadoc author, configure report file name
 - Smaller xml report
 - New "Delete file QuickFix" for unused classes
 - New option "Filter classes with main method" default "false"

Bugfixes:
 - QuickFix was broken, when there are several classes in one java file
 - UCDetector is fit for eclipse 3.7
 - Visibility detection was broken for mode "classes only"
 - [ 3124968 ] No private marker for enum methods/fields

// -----------------------------------------------------------------------------
UCDetector 1.6.0 from 2010-08-17:
Bugfixes:
 - fixed missing QuickFix icons
 - [ 3025571 ] Exception loading modes: Malformed \uxxxx encoding
 - [ 3046637 ] Headless fails to recognize projects
 - Cancel broken in active mode, buttons: "Rename..." and "New..."

New features:
 - [ 2810803 ] Added again: Combobox to change all visibility combos
 - [ 3014516 ] Search class name in file: Full AND simple
 - New button: Rename mode
 - New option: Log to Eclipse Console View

// -----------------------------------------------------------------------------
UCDetector 1.5.0 from 2010-06-10:
Bugfixes:
 - [ 2922801 ] Quick fix exception on enum declaration
 - [ 2968753 ] protected abstract method cannot be made private
 - [ 2986496 ] Marker don't disappear when deleting a complete line
 - [ 2996487 ] Applying quick fix scrolls page
 - [ 2996965 ] Property 'File name pattern to search': Trim whitespaces
 - [ 2996537 ] Eclipse Plug-in/Extension detection: Added to default file pattern: MANIFEST.MF


New features:
 - [ 2929828 ] Added filter to exclude classes extending/implementing