@@ -31,13 +31,20 @@ CountIterator_NotPrivate=UCDetector: Elements not filtered and not private:
 CountIterator_Packages=packages
 CountIterator_Projects=projects
 # ------------------------------------------------------------------------------
+PreferencePage_IgnoreResourcesGroup=Resources
+PreferencePage_IgnoreResourcesGroup=Resources
+PreferencePage_IgnoreClassesGroup=Classes
+PreferencePage_IgnoreMarkedCodeGroup=Marked code
+PreferencePage_IgnoreOthersGroup=Others
+
+# ------------------------------------------------------------------------------
 PreferencePage_IgnoreSourceFolderFilter=&Source folders
 PreferencePage_IgnoreSourceFolderFilterToolTip=Source folders matching this expression, will be ignored during detection
 
 PreferencePage_IgnorePackageFilter=&Packages
 PreferencePage_IgnorePackageFilterToolTip=Packages matching this expression, will be ignored during detection
 
-PreferencePage_IgnoreClassFilter=&Classes
+PreferencePage_IgnoreClassFilter=&Matching name
 PreferencePage_IgnoreClassFilterToolTip=Classes matching this expression, will be ignored during detection
 
 PreferencePage_IgnoreMethodFilter=&Methods
@@ -50,14 +57,14 @@ PreferencePage_IgnoreAnnotationsFilter=Code with &Annotations
 PreferencePage_IgnoreAnnotationsFilterToolTip=Code marked with these annotations (do not use '@' in textfield),\n\
  will be ignored during detection (full class name recommended)
 
-PreferencePage_FilterClassWithMainMethod=Classes with a main method
+PreferencePage_FilterClassWithMainMethod=Having a main method
 PreferencePage_FilterClassWithMainMethodToolTip=Classes with a main method will have no "unused class" markers
 
-PreferencePage_IgnoreImplements=Classes &implementing/extending
+PreferencePage_IgnoreImplements=&Implementing/extending
 PreferencePage_IgnoreImplementsToolTip=Ignore classes/interfaces which implement or extend\n\
  these classes/interfaces (full class name recommended)
 
-PreferencePage_IgnoreContainString=Classes containing string
+PreferencePage_IgnoreContainString=Containing string
 PreferencePage_IgnoreContainStringToolTip=Classes containing one of these strings, will be ignored during detection - useful for generated code
 
 PreferencePage_IgnoreBeanMethods=&Bean methods
@@ -73,13 +80,13 @@ PreferencePage_IgnoreNoUcd=&Code with // NO_UCD or\n\
  @SuppressWarnings("ucd")
 PreferencePage_IgnoreNoUcdToolTip=Ignore UCDetector specific tags. Remove to review these tags
 #
-PreferencePage_IgnoreDerived=Derived files
+PreferencePage_IgnoreDerived=In derived files
 PreferencePage_IgnoreDerivedToolTip=Ignore a class, if its file is derived\n\
  (see properties dialog of a file)
 #
 PreferencePage_ComboToolTip=How to show detected code
 #
-PreferencePage_TabFilter=&Filter
+PreferencePage_TabIgnore=&Ignore
 PreferencePage_TabDetect=&Detect
 PreferencePage_TabKeywords=&Keywords
 PreferencePage_TabReport=&Report
